force-app/main/default/objects/copado__External_CI_Job__c/copado__External_CI_Job__c.object-meta.xml
<CustomObject>
    <label>External CI Job</label>
    <nameField>
        <label>External CI Jobs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External CI Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>