force-app/main/default/objects/copado__External_CI_Job__c/fields/copado__Continue_on_failure__c.field-meta.xml
<CustomField>
    <fullName>copado__Continue_on_failure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Continue on failure</label>
    <type>Checkbox</type>
</CustomField>