force-app/main/default/objects/copado__External_CI_Job__c/fields/copado__External_CI_Setting__c.field-meta.xml
<CustomField>
    <fullName>copado__External_CI_Setting__c</fullName>
    <label>External CI Setting</label>
    <referenceTo>copado__External_CI_Setting__c</referenceTo>
    <relationshipLabel>External CI Jobs</relationshipLabel>
    <relationshipName>External_CI_Jobs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>