force-app/main/default/objects/copado__External_CI_Job__c/fields/copado__Job_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>copado__Job_Api_Name__c</fullName>
    <label>Job Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>