force-app/main/default/objects/copado__External_CI_Job__c/fields/copado__Timeout_in_minutes__c.field-meta.xml
<CustomField>
    <fullName>copado__Timeout_in_minutes__c</fullName>
    <label>Timeout in minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>