force-app/main/default/objects/copado__External_CI_Job__c/listViews/copado__All.listView-meta.xml
<ListView>
    <fullName>copado__All</fullName>
    <columns>NAME</columns>
    <columns>copado__External_CI_Setting__c</columns>
    <columns>copado__Job_Api_Name__c</columns>
    <columns>copado__Invoke_on__c</columns>
    <columns>copado__Continue_on_failure__c</columns>
    <columns>copado__Timeout_in_minutes__c</columns>
    <columns>copado__User_Story__c</columns>
    <columns>copado__Environment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>